welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: error: illegal start of simple pattern
        case Direction WEST => right();forward();right();
                            ^SnakeBuggle:15: error: '=>' expected but ';' found.
        case Direction WEST => right();forward();right();
                                      ^